@@ -1,5 +1,5 @@
 Copyright (c) 2011-2012 Dan Prince
-Copyright (c) 2012 Red Hat
+Copyright (c) 2012 Red Hat Inc.
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
